--- a/MyApp/www/index-por.html
+++ b/MyApp/www/index-por.html
@@ -234,8 +234,8 @@ Informação de usuário:</h4>
 
                 <div>
                   <h3>Animação</h3>
-                  <div class="setting sound">
-                    <span class="on " onclick="Animacion(1)">Ignição </span>  <span class="off " onclick="Animacion(0)"> Fora</span>
+                  <div class="setting animacion">
+                    <span class="onAni " onclick="Animacion(1)">Ignição </span>  <span class="offAni " onclick="Animacion(0)"> Fora</span>
                   </div>
                 </div>
 
