--- a/MyApp/www/index.html
+++ b/MyApp/www/index.html
@@ -233,7 +233,7 @@
                 <div>
                   <h3>Animation</h3>
                   <div class="setting animacion">
-                    <span class="on " onclick="Animacion(1)">On </span>  <span class="off " onclick="Animacion(0)"> Off</span>
+                    <span class="onAni " onclick="Animacion(1)">On </span>  <span class="offAni " onclick="Animacion(0)"> Off</span>
                   </div>
                 </div>
 
