--- a/MyApp/www/juegos/Drag/dns-por.html
+++ b/MyApp/www/juegos/Drag/dns-por.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="favicon.ico" type="../../img/fv-icon.png"/> 
+    <link rel="icon" href="../../favicon.png" type="icon">
     <link rel="stylesheet" type="text/css" href="../../css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="../../css/bootstrap-theme.min.css">    
     <link rel="stylesheet" type="text/css" href="../../css/styles.css">
@@ -113,8 +113,11 @@
                   </div>
                   <div class="modal-footer">
                       <a href="" onclick="location.reload()">
-                          <button>Atrás</button>
-                      </a>
+                                <button id="volver">Jogar novamente</button>
+                            </a>
+                            <a href="#" onclick="history.back()">
+                                <button>Saída</button>
+                            </a>
                   </div>
               </div>
           </div>
@@ -138,9 +141,12 @@
                         </div>
                     </div>
                     <div class="modal-footer">
-                        <a href="" onclick="location.reload()">
-                            <button>Atrás</button>
-                        </a>
+                            <a href="" onclick="location.reload()">
+                                    <button id="volver">Jogar novamente</button>
+                                </a>
+                                <a href="#" onclick="history.back()">
+                                    <button>Saída</button>
+                                </a>
                     </div>
                 </div>
             </div>
