--- a/MyApp/www/juegos/Drag/ipv4-por.html
+++ b/MyApp/www/juegos/Drag/ipv4-por.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" type="text/css" href="../../css/bootstrap-theme.min.css">    
     <link rel="stylesheet" type="text/css" href="../../css/styles.css">
     <link rel="stylesheet" type="text/css" href="../../css/media.css">
-    <link rel="icon" href="favicon.ico" type="../../img/fv-icon.png"/> 
+    <link rel="icon" href="../../favicon.png" type="icon">
     <script src='../../js/jquery.js'></script>
     <script src='../../js/jquery.min.js'></script>
     <script src="../../js/bootstrap.min.js"></script> 
@@ -109,9 +109,12 @@
                       </div>
                   </div>
                   <div class="modal-footer">
-                      <a href="" onclick="location.reload()">
-                          <button>Atrás</button>
-                      </a>
+                        <a href="" onclick="location.reload()">
+                                <button id="volver">Jogar novamente</button>
+                            </a>
+                            <a href="#" onclick="history.back()">
+                                <button>Saída</button>
+                            </a>
                   </div>
               </div>
           </div>
@@ -136,9 +139,12 @@
                         </div>
                     </div>
                     <div class="modal-footer">
-                        <a href="" onclick="location.reload()">
-                            <button>Atrás</button>
-                        </a>
+                            <a href="" onclick="location.reload()">
+                                    <button id="volver">Jogar novamente</button>
+                                </a>
+                                <a href="#" onclick="history.back()">
+                                    <button>Saída</button>
+                                </a>
                     </div>
                 </div>
             </div>
