--- a/MyApp/www/juegos/Memoria/index-es.html
+++ b/MyApp/www/juegos/Memoria/index-es.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" type="text/css" href="../../css/bootstrap-theme.min.css">    
     <link rel="stylesheet" type="text/css" href="../../css/styles.css">
     <link rel="stylesheet" type="text/css" href="../../css/media.css">
-    <link rel="icon" href="favicon.ico" type="../../img/fv-icon.png"/> 
+    <link rel="icon" href="../../favicon.png" type="icon">
 <!--<link rel="stylesheet" type="text/css" href="../../css/jquery.ui.all.css">
     <link rel="stylesheet" type="text/css" href="../../css/jquery-ui.css"> -->
 
@@ -119,8 +119,12 @@
                         </div>
                         <div class="modal-footer">
                             <a href="" onclick="location.reload()">
+                                <button id="volver">volver a jugar</button>
+                            </a>
+                            <a href="#" onclick="history.back()">
                                 <button>Atrás</button>
                             </a>
+                            
                         </div>
                     </div>
                 </div>
@@ -146,6 +150,9 @@
                         </div>
                         <div class="modal-footer">
                             <a href="" onclick="location.reload()">
+                                <button id="volver">volver a jugar</button>
+                            </a>
+                            <a href="#" onclick="history.back()">
                                 <button>Atrás</button>
                             </a>
                         </div>
@@ -171,6 +178,7 @@
                 <a href="" onclick="location.reload()">
                     <button>Atrás</button>
                 </a>
+
             </div>
         </div>
 
