--- a/MyApp/www/juegos/crucigrama/InternetGovernance-es.html
+++ b/MyApp/www/juegos/crucigrama/InternetGovernance-es.html
@@ -6,7 +6,7 @@
 <title>Crucigrama</title>
 <link rel="stylesheet" type="text/css" href="../../css/bootstrap.min.css">
 <link rel="stylesheet" type="text/css" href="../../css/bootstrap-theme.min.css">    
-<link rel="icon" href="favicon.ico" type="img/fv-icon.png"/> 
+<link rel="icon" href="../../favicon.png" type="icon">
 <link rel="stylesheet" href="css/game.css" type="text/css" media="all">
 <link rel="stylesheet" href="css/play.css" type="text/css" media="all">
 <link rel="stylesheet" type="text/css" href="../../css/styles.css">
@@ -64,6 +64,9 @@
 									</div>
 									<div class="modal-footer">
 											<a href="" onclick="location.reload()">
+													<button id="volver">volver a jugar</button>
+											</a>
+											<a href="#" onclick="history.back()">
 													<button>Atrás</button>
 											</a>
 									</div>
@@ -91,6 +94,9 @@
 									</div>
 									<div class="modal-footer">
 											<a href="" onclick="location.reload()">
+													<button id="volver">volver a jugar</button>
+											</a>
+											<a href="#" onclick="history.back()">
 													<button>Atrás</button>
 											</a>
 									</div>
