--- a/MyApp/www/juegos/crucigrama/InternetGovernance-por.html
+++ b/MyApp/www/juegos/crucigrama/InternetGovernance-por.html
@@ -4,7 +4,7 @@
 <meta name="viewport" content="user-scalable=yes, initial-scale=1, maximum-scale=1, minimum-scale=0.5, width=device-width, height=device-height" />
 
 <title>A. N. G. E. L.</title>
-<link rel="icon" href="favicon.ico" type="img/fv-icon.png"/> 
+<link rel="icon" href="../../favicon.png" type="icon">
 <link rel="stylesheet" type="text/css" href="../../css/bootstrap.min.css">
 <link rel="stylesheet" type="text/css" href="../../css/bootstrap-theme.min.css">    
 
@@ -74,7 +74,10 @@
 									</div>
 									<div class="modal-footer">
 											<a href="" onclick="location.reload()">
-													<button>Atrás</button>
+													<button id="volver">Jogar novamente</button>
+											</a>
+											<a href="#" onclick="history.back()">
+													<button>Saída</button>
 											</a>
 									</div>
 							</div>
@@ -106,7 +109,10 @@
 									</div>
 									<div class="modal-footer">
 											<a href="" onclick="location.reload()">
-													<button>Atrás</button>
+													<button id="volver">Jogar novamente</button>
+											</a>
+											<a href="#" onclick="history.back()">
+													<button>Saída</button>
 											</a>
 									</div>
 							</div>
