--- a/MyApp/www/juegos/crucigrama/crosswordip4-es.html
+++ b/MyApp/www/juegos/crucigrama/crosswordip4-es.html
@@ -6,7 +6,7 @@
 <title>A. N. G. E. L.</title>
 <link rel="stylesheet" type="text/css" href="../../css/bootstrap.min.css">
 <link rel="stylesheet" type="text/css" href="../../css/bootstrap-theme.min.css">    
-<link rel="icon" href="favicon.ico" type="img/fv-icon.png"/> 
+<link rel="icon" href="../../favicon.png" type="icon">
 <link rel="stylesheet" href="css/game.css" type="text/css" media="all">
 <link rel="stylesheet" href="css/play.css" type="text/css" media="all">
 <link rel="stylesheet" type="text/css" href="../../css/styles.css">
@@ -54,9 +54,12 @@
                       </div>
                   </div>
                   <div class="modal-footer">
-                      <a href="" onclick="location.reload()">
-                          <button>Atrás</button>
-                      </a>
+						<a href="" onclick="location.reload()">
+                                <button id="volver">volver a jugar</button>
+                            </a>
+                            <a href="#" onclick="history.back()">
+                                <button>Atrás</button>
+                            </a>
                   </div>
               </div>
           </div>
@@ -81,9 +84,12 @@
                         </div>
                     </div>
                     <div class="modal-footer">
-                        <a href="" onclick="location.reload()">
-                            <button>Atrás</button>
-                        </a>
+							<a href="" onclick="location.reload()">
+									<button id="volver">volver a jugar</button>
+								</a>
+								<a href="#" onclick="history.back()">
+									<button>Atrás</button>
+								</a>
                     </div>
                 </div>
             </div>
