--- a/MyApp/www/juegos/crucigrama/index-es.html
+++ b/MyApp/www/juegos/crucigrama/index-es.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" type="text/css" href="../../css/bootstrap-theme.min.css">    
         <link rel="stylesheet" type="text/css" href="../../css/styles.css">
         <link rel="stylesheet" type="text/css" href="../../css/media.css">
-        <link rel="icon" href="favicon.ico" type="img/fv-icon.png"/>  
+        <link rel="icon" href="../../favicon.png" type="icon">
 
         <script src='../../js/jquery.js'></script>
         <script src='../../js/jquery.min.js'></script>
