--- a/MyApp/www/juegos/Drag/dns-es.html
+++ b/MyApp/www/juegos/Drag/dns-es.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="favicon.ico" type="../../img/fv-icon.png"/> 
+    <link rel="icon" href="../../favicon.png" type="icon">
     <link rel="stylesheet" type="text/css" href="../../css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="../../css/bootstrap-theme.min.css">    
     <link rel="stylesheet" type="text/css" href="../../css/styles.css">
@@ -111,9 +111,13 @@
                       </div>
                   </div>
                   <div class="modal-footer">
-                      <a href="" onclick="location.reload()">
-                          <button>Atrás</button>
-                      </a>
+                        <a href="" onclick="location.reload()">
+                                <button id="volver">volver a jugar</button>
+                            </a>
+                            <a href="#" onclick="history.back()">
+                                <button>Atrás</button>
+                            </a>
+
                   </div>
               </div>
           </div>
@@ -137,9 +141,13 @@
                         </div>
                     </div>
                     <div class="modal-footer">
-                        <a href="" onclick="location.reload()">
-                            <button>Atrás</button>
-                        </a>
+                            <a href="" onclick="location.reload()">
+                                    <button id="volver">volver a jugar</button>
+                                </a>
+                                <a href="#" onclick="history.back()">
+                                    <button>Atrás</button>
+                                </a>
+    
                     </div>
                 </div>
             </div>
