--- a/MyApp/www/juegos/Drag/index-por.html
+++ b/MyApp/www/juegos/Drag/index-por.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" type="text/css" href="../../css/styles.css">
         <link rel="stylesheet" type="text/css" href="../../css/media.css">
         
-        <link rel="icon" href="favicon.ico" type="../../img/fv-icon.png"/> 
+        <link rel="icon" href="../../favicon.png" type="icon">
         <script src='../../js/jquery.js'></script>
         <script src='../../js/jquery.min.js'></script>
         <script src="../../js/bootstrap.min.js"></script> 
