--- a/MyApp/www/juegos/Drag/ipv4.html
+++ b/MyApp/www/juegos/Drag/ipv4.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" type="text/css" href="../../css/bootstrap-theme.min.css">
     <link rel="stylesheet" type="text/css" href="../../css/styles.css">
     <link rel="stylesheet" type="text/css" href="../../css/media.css">
-
+    <link rel="icon" href="../../favicon.png" type="icon">
     <script src='../../js/jquery.js'></script>
     <script src='../../js/jquery.min.js'></script>
     <script src="../../js/bootstrap.min.js"></script>
@@ -110,9 +110,12 @@
                             </div>
                         </div>
                         <div class="modal-footer">
-                            <a href="" onclick="location.reload()">
-                                <button>Back</button>
-                            </a>
+                                <a href="" onclick="location.reload()">
+                                        <button id="volver">Play again</button>
+                                    </a>
+                                    <a href="#" onclick="history.back()">
+                                        <button>Back</button>
+                                    </a>
                         </div>
                     </div>
                 </div>
@@ -137,9 +140,12 @@
                             </div>
                         </div>
                         <div class="modal-footer">
-                            <a href="" onclick="location.reload()">
-                                <button>Back</button>
-                            </a>
+                                <a href="" onclick="location.reload()">
+                                        <button id="volver">Play again</button>
+                                    </a>
+                                    <a href="#" onclick="history.back()">
+                                        <button>Back</button>
+                                    </a>
                         </div>
                     </div>
                 </div>
