--- a/MyApp/www/juegos/Drag/udp.html
+++ b/MyApp/www/juegos/Drag/udp.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="favicon.ico" type="../../img/fv-icon.png"/> 
+    <link rel="icon" href="../../favicon.png" type="icon">
     <link rel="stylesheet" type="text/css" href="../../css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="../../css/bootstrap-theme.min.css">    
     <link rel="stylesheet" type="text/css" href="../../css/styles.css">
@@ -111,9 +111,12 @@
                             </div>
                         </div>
                         <div class="modal-footer">
-                            <a href="" onclick="location.reload()">
-                                <button>Back</button>
-                            </a>
+                                <a href="" onclick="location.reload()">
+                                        <button id="volver">Play again</button>
+                                    </a>
+                                    <a href="#" onclick="history.back()">
+                                        <button>Back</button>
+                                    </a>
                         </div>
                     </div>
                 </div>
@@ -138,9 +141,12 @@
                             </div>
                         </div>
                         <div class="modal-footer">
-                            <a href="" onclick="location.reload()">
-                                <button>Back</button>
-                            </a>
+                                <a href="" onclick="location.reload()">
+                                        <button id="volver">Play again</button>
+                                    </a>
+                                    <a href="#" onclick="history.back()">
+                                        <button>Back</button>
+                                    </a>
                         </div>
                     </div>
                 </div>
