--- a/MyApp/www/juegos/Memoria/index-por.html
+++ b/MyApp/www/juegos/Memoria/index-por.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" type="text/css" href="../../css/bootstrap-theme.min.css">    
     <link rel="stylesheet" type="text/css" href="../../css/styles.css">
     <link rel="stylesheet" type="text/css" href="../../css/media.css">
-    <link rel="icon" href="favicon.ico" type="../../img/fv-icon.png"/> 
+    <link rel="icon" href="../../favicon.png" type="icon">
 <!--<link rel="stylesheet" type="text/css" href="../../css/jquery.ui.all.css">
     <link rel="stylesheet" type="text/css" href="../../css/jquery-ui.css"> -->
 
@@ -124,7 +124,10 @@
                         </div>
                         <div class="modal-footer">
                             <a href="" onclick="location.reload()">
-                                <button>Atrás</button>
+                                <button id="volver">Jogar novamente</button>
+                            </a>
+                            <a href="#" onclick="history.back()">
+                                <button>Saída</button>
                             </a>
                         </div>
                     </div>
@@ -154,8 +157,11 @@
                             </div>
                         </div>
                         <div class="modal-footer">
-                            <a href="" onclick="location.reload()">
-                                <button>Atrás</button>
+                           <a href="" onclick="location.reload()">
+                                <button id="volver">Jogar novamente</button>
+                            </a>
+                            <a href="#" onclick="history.back()">
+                                <button>Saída</button>
                             </a>
                         </div>
                     </div>
