--- a/MyApp/www/juegos/Memoria/index.html
+++ b/MyApp/www/juegos/Memoria/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" type="text/css" href="../../css/bootstrap-theme.min.css">
     <link rel="stylesheet" type="text/css" href="../../css/styles.css">
     <link rel="stylesheet" type="text/css" href="../../css/media.css">
-    <link rel="icon" href="favicon.ico" type="../../img/fv-icon.png"/>
+    <link rel="icon" href="../../favicon.png" type="icon">
 <!--<link rel="stylesheet" type="text/css" href="../../css/jquery.ui.all.css">
     <link rel="stylesheet" type="text/css" href="../../css/jquery-ui.css"> -->
 
@@ -123,6 +123,9 @@
                        
                         <div class="modal-footer">
                             <a href="" onclick="location.reload()">
+                                <button id="volver">Play again</button>
+                            </a>
+                            <a href="#" onclick="history.back()">
                                 <button>Back</button>
                             </a>
 
@@ -158,6 +161,9 @@
                           
                         <div class="modal-footer">
                             <a href="" onclick="location.reload()">
+                                <button id="volver">Play again</button>
+                            </a>
+                            <a href="#" onclick="history.back()">
                                 <button>Back</button>
                             </a>
                         </div>
