--- a/MyApp/www/juegos/crucigrama/InternetGovernance.html
+++ b/MyApp/www/juegos/crucigrama/InternetGovernance.html
@@ -4,7 +4,7 @@
 <meta name="viewport" content="user-scalable=yes, initial-scale=1, maximum-scale=1, minimum-scale=0.5, width=device-width, height=device-height" />
 
 <title>Crossword</title>
-<link rel="icon" href="favicon.ico" type="img/fv-icon.png"/> 
+<link rel="icon" href="../../favicon.png" type="icon">
 <link rel="stylesheet" type="text/css" href="../../css/bootstrap.min.css">
 <link rel="stylesheet" type="text/css" href="../../css/bootstrap-theme.min.css">    
 
@@ -57,8 +57,11 @@
                   </div>
                   <div class="modal-footer">
                       <a href="" onclick="location.reload()">
-                          <button>Back</button>
-                      </a>
+													<button id="volver">Play again</button>
+											</a>
+											<a href="#" onclick="history.back()">
+													<button>Back</button>
+											</a>
                   </div>
               </div>
           </div>
@@ -83,8 +86,11 @@
                     </div>
                     <div class="modal-footer">
                         <a href="" onclick="location.reload()">
-                            <button>Back</button>
-                        </a>
+														<button id="volver">Play again</button>
+												</a>
+												<a href="#" onclick="history.back()">
+														<button>Back</button>
+												</a>
                     </div>
                 </div>
             </div>
