--- a/MyApp/www/juegos/discos/index.html
+++ b/MyApp/www/juegos/discos/index.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-<link rel="icon" href="favicon.ico" type="../../img/fv-icon.png"/> 
+<link rel="icon" href="../../favicon.png" type="icon">
 <link rel="stylesheet" href="../../css/bootstrap.min.css">
 <link rel="stylesheet" href="../../css/bootstrap-theme.min.css">
 <link rel="stylesheet" href="../../css/jquery-ui.css">
