--- a/MyApp/www/index-es.html
+++ b/MyApp/www/index-es.html
@@ -222,14 +222,14 @@
                 <div>
                   <h3>Efectos de sonido</h3>
                   <div class="setting sound">
-                    <span class="on " onclick="EffectMusic(1)">Encendido </span>  <span class="off " onclick="EffectMusic(0)"> Apagado</span>
+                    <span class="on" onclick="EffectMusic(1)">Encendido </span>  <span class="off " onclick="EffectMusic(0)"> Apagado</span>
                   </div>
                 </div>
 
                 <div>
                     <h3>Animación</h3>
                     <div class="setting animacion">
-                      <span id="onAni" class="onAni" onclick="Animacion(1)">Encendido </span>  <span id="offAni" class="offAni " onclick="Animacion(0)"> Apagado</span>
+                      <span class="onAni" onclick="Animacion(1)">Encendido </span><span class="offAni" onclick="Animacion(0)"> Apagado</span>
                     </div>
                   </div>
 
@@ -287,8 +287,8 @@
                   <a href="http://www.lacnic.net/web/lacnic/ipv6" target="_blank"><h4>LACNIC</h4></a>
                 
                   <h2>VERSIÓN</h2>
-                  <h4>"2.4"</h4> 
-                  <h4> Comp=29-01-2019</h4>
+                  <h4>"2.5"</h4> 
+                  <h4> Comp=14-05-2019</h4>
               </div>
             </div>
             <div class="modal-footer">
@@ -343,6 +343,6 @@
           <!-- // <script src="sounds/sound.js"></script> -->
         </footer>
     </div>
-    <h4 class="desc">Versión="2.4" Comp=29-01-2019</h4>
+    <h4 class="desc">Versión="2.5" Comp=14-05-2019</h4>
   </body>
 </html>
