--- a/MyApp/www/juegos/Drag/icmpv6-es.html
+++ b/MyApp/www/juegos/Drag/icmpv6-es.html
@@ -52,10 +52,10 @@
                 <div class="level-difficulty">
                     <h4>Seleccione el Nivel!</h4>                    
                     <button id="level1" type="submit" class="btn btn-default">Fácil</button>
-                    <p>Habrán entre cuatro (4) y seis (6) cajas ya completas</p>
+                    <p>Habrán entre dos (2) y cuatro (4) cajas ya completas</p>
                     <hr>
                     <button id="level2" type="submit" class="btn btn-default">Medio</button>
-                    <p>Habrán entre dos (2) y cuatro (4) cajas ya completas</p>
+                    <p>Habrán entre unno (1) y tres (3) cajas ya completas</p>
                     <hr>
                     <button id="level3" type="submit" class="btn btn-default">Difícil</button>
                     <p>No habrá ninguna caja llena</p>
@@ -164,15 +164,11 @@
       </div>
 
       <div id="boxudp" class="text-center">
-			<input id="ICMPv6-0" class="col-xs-12 col-sm-12 col-md-12 input" disabled="disabled"> 
+			<input id="ICMPv6-0" class="col-xs-3 col-sm-3 col-md-3 input" disabled="disabled"> 
 			<input id="ICMPv6-1" class="col-xs-3 col-sm-3 col-md-3 input" disabled="disabled"> 
-			<input id="ICMPv6-2" class="col-xs-3 col-sm-3 col-md-3 input" disabled="disabled"> 
-			<input id="ICMPv6-3" class="col-xs-3 col-sm-3 col-md-3 input" disabled="disabled">
-			<input id="ICMPv6-4" class="col-xs-3 col-sm-3 col-md-3 input" disabled="disabled"> 
-			<input id="ICMPv6-5" class="col-xs-3 col-sm-3 col-md-3 input" disabled="disabled"> 
-			<input id="ICMPv6-6" class="col-xs-3 col-sm-3 col-md-3 input" disabled="disabled"> 
-			<input id="ICMPv6-7" class="col-xs-6 col-sm-6 col-md-6 input" disabled="disabled"> 
-			<input id="ICMPv6-8" class="col-xs-12 col-sm-12 col-md-12 input" disabled="disabled"> 		
+			<input id="ICMPv6-2" class="col-xs-6 col-sm-6 col-md-6 input" disabled="disabled"> 
+			<input id="ICMPv6-3" class="col-xs-12 col-sm-12 col-md-12 input" disabled="disabled">
+			<input id="ICMPv6-4" class="col-xs-12 col-sm-12 col-md-12 input" disabled="disabled"> 					
 	</div>
 
       <div id="pregunta">
