--- a/MyApp/www/juegos/Drag/icmpv6.html
+++ b/MyApp/www/juegos/Drag/icmpv6.html
@@ -52,10 +52,10 @@
                 <div class="level-difficulty">
                     <h4>Choose a Topic!</h4>                    
                     <button id="level1" type="submit" class="btn btn-default">Easy</button>
-                    <p>There will be between four(4) and six(6) filled boxes</p>
+                    <p>There will be between two(2) and four(4) filled boxes</p>
                     <hr>
                     <button id="level2" type="submit" class="btn btn-default">Medium</button>
-                    <p>There will be two(2) and four(4) filled boxes</p>
+                    <p>There will be one(1) and three(3) filled boxes</p>
                     <hr>
                     <button id="level3" type="submit" class="btn btn-default">Hard</button>
                     <p>There will be no filled boxes</p>
@@ -164,15 +164,11 @@
       </div>
 
       <div id="boxudp" class="text-center">
-			<input id="ICMPv6-0" class="col-xs-12 col-sm-12 col-md-12 input" disabled="disabled"> 
-			<input id="ICMPv6-1" class="col-xs-3 col-sm-3 col-md-3 input" disabled="disabled"> 
-			<input id="ICMPv6-2" class="col-xs-3 col-sm-3 col-md-3 input" disabled="disabled"> 
-			<input id="ICMPv6-3" class="col-xs-3 col-sm-3 col-md-3 input" disabled="disabled">
-			<input id="ICMPv6-4" class="col-xs-3 col-sm-3 col-md-3 input" disabled="disabled"> 
-			<input id="ICMPv6-5" class="col-xs-3 col-sm-3 col-md-3 input" disabled="disabled"> 
-			<input id="ICMPv6-6" class="col-xs-3 col-sm-3 col-md-3 input" disabled="disabled"> 
-			<input id="ICMPv6-7" class="col-xs-6 col-sm-6 col-md-6 input" disabled="disabled"> 
-			<input id="ICMPv6-8" class="col-xs-12 col-sm-12 col-md-12 input" disabled="disabled"> 		
+        <input id="ICMPv6-0" class="col-xs-3 col-sm-3 col-md-3 input" disabled="disabled"> 
+        <input id="ICMPv6-1" class="col-xs-3 col-sm-3 col-md-3 input" disabled="disabled"> 
+        <input id="ICMPv6-2" class="col-xs-6 col-sm-6 col-md-6 input" disabled="disabled"> 
+        <input id="ICMPv6-3" class="col-xs-12 col-sm-12 col-md-12 input" disabled="disabled">
+        <input id="ICMPv6-4" class="col-xs-12 col-sm-12 col-md-12 input" disabled="disabled">  		
 	</div>
 
       <div id="pregunta">
