--- a/MyApp/www/juegos/Drag/tcp-es.html
+++ b/MyApp/www/juegos/Drag/tcp-es.html
@@ -54,10 +54,10 @@
                   <div class="level-difficulty">
                     <h4>¡Elige un nivel de dificultad!</h4>                    
                       <button id="level1" type="submit" class="btn btn-default">Fácil</button>
-                      <p>Habrán nueve ( 9 ) cajas llenas</p>
+                      <p>Habrán entre seis (6) y nueve ( 9 ) cajas llenas</p>
                       <hr>
                       <button id="level2" type="submit" class="btn btn-default">Medio</button>
-                      <p>Habrán seis ( 6 ) cajas llenas</p>
+                      <p>Habrán entre cuatro (4) seis ( 6 ) cajas llenas</p>
                       <hr>
                       <button id="level3" type="submit" class="btn btn-default">Difícil</button>
                       <p>No habrá ninguna caja llena</p>
