--- a/MyApp/www/juegos/Drag/tcp.html
+++ b/MyApp/www/juegos/Drag/tcp.html
@@ -54,10 +54,10 @@
  -->                  <div class="level-difficulty">
                       <h4>Choose a Topic!</h4>                    
                       <button id="level1" type="submit" class="btn btn-default">Easy</button>
-                      <p>There will be nine(9) already filled boxes</p>
+                      <p>There will be six (6) and nine (9) already filled boxes</p>
                       <hr>
                       <button id="level2" type="submit" class="btn btn-default">Medium</button>
-                      <p>There will be six(6) already filled boxes</p>
+                      <p>There will be four (4) and six (6) already filled boxes</p>
                       <hr>
                       <button id="level3" type="submit" class="btn btn-default">Hard</button>
                       <p>There will be no filled boxes</p>
