--- a/MyApp/www/juegos/Drag/icmpv6-por.html
+++ b/MyApp/www/juegos/Drag/icmpv6-por.html
@@ -52,10 +52,10 @@
                 <div class="level-difficulty">
                     <h4>Escolha um nível de dificuldade!</h4>                    
                     <button id="level1" type="submit" class="btn btn-default">Fácil</button>
-                    <p>Haverá entre cuatro(4) e seis(6) caixas preenchidas</p>
+                    <p>Haverá entre dois(2) e cuatro(4) caixas preenchidas</p>
                     <hr>
                     <button id="level2" type="submit" class="btn btn-default">Meio</button>
-                    <p>Haverá entre dois(2) e cuatro(4) caixas preenchidas</p>
+                    <p>Haverá entre um(1) e tres(3) caixas preenchidas</p>
                     <hr>
                     <button id="level3" type="submit" class="btn btn-default">Difícil</button>
                     <p>Não haverá caixa preenchidas</p>
@@ -165,15 +165,11 @@
       </div>
 
       <div id="boxudp" class="text-center">
-			<input id="ICMPv6-0" class="col-xs-12 col-sm-12 col-md-12 input" disabled="disabled"> 
-			<input id="ICMPv6-1" class="col-xs-3 col-sm-3 col-md-3 input" disabled="disabled"> 
-			<input id="ICMPv6-2" class="col-xs-3 col-sm-3 col-md-3 input" disabled="disabled"> 
-			<input id="ICMPv6-3" class="col-xs-3 col-sm-3 col-md-3 input" disabled="disabled">
-			<input id="ICMPv6-4" class="col-xs-3 col-sm-3 col-md-3 input" disabled="disabled"> 
-			<input id="ICMPv6-5" class="col-xs-3 col-sm-3 col-md-3 input" disabled="disabled"> 
-			<input id="ICMPv6-6" class="col-xs-3 col-sm-3 col-md-3 input" disabled="disabled"> 
-			<input id="ICMPv6-7" class="col-xs-6 col-sm-6 col-md-6 input" disabled="disabled"> 
-			<input id="ICMPv6-8" class="col-xs-12 col-sm-12 col-md-12 input" disabled="disabled"> 		
+        <input id="ICMPv6-0" class="col-xs-3 col-sm-3 col-md-3 input" disabled="disabled"> 
+        <input id="ICMPv6-1" class="col-xs-3 col-sm-3 col-md-3 input" disabled="disabled"> 
+        <input id="ICMPv6-2" class="col-xs-6 col-sm-6 col-md-6 input" disabled="disabled"> 
+        <input id="ICMPv6-3" class="col-xs-12 col-sm-12 col-md-12 input" disabled="disabled">
+        <input id="ICMPv6-4" class="col-xs-12 col-sm-12 col-md-12 input" disabled="disabled">  		
 	</div>
 
       <div id="pregunta">
