--- a/MyApp/www/juegos/Drag/tcp-por.html
+++ b/MyApp/www/juegos/Drag/tcp-por.html
@@ -54,10 +54,10 @@
  -->                  <div class="level-difficulty">
                     <h4>Escolha um nível de dificuldade</h4>                    
                       <button id="level1" type="submit" class="btn btn-default">Fácil</button>
-                      <p>Haverá nove (9) caixas cheias</p>
+                      <p>Haverá entre seis (6) e nove (9) caixas preenchidas</p>
                       <hr>
                       <button id="level2" type="submit" class="btn btn-default">Meio</button>
-                      <p>Haverá seis (6) caixas cheias</p>
+                      <p>Haverá entre quatro (6) e nove (9) caixas preenchidas</p>
                       <hr>
                       <button id="level3" type="submit" class="btn btn-default">Difícil</button>
                       <p>Não haverá caixa cheia.</p>
