--- a/MyApp/www/juegos/Drag/index-por.html
+++ b/MyApp/www/juegos/Drag/index-por.html
@@ -61,7 +61,7 @@
                                <button id="Ethernet" class="btn btn-default">Ethernet </button>
                             </a>
                            <hr>
-                             <a href="ICMPv6-por.html">
+                             <a href="icmpv6-por.html">
                                <button id="ICMPv6" class="btn btn-default">ICMPv6</button>
                             </a>
                             <hr>
