--- a/MyApp/www/juegos/Drag/ipv4-es.html
+++ b/MyApp/www/juegos/Drag/ipv4-es.html
@@ -50,10 +50,10 @@
                 <div class="level-difficulty">
                     <h4>¡Elige un nivel de dificultad!</h4>                    
                     <button id="level1" type="submit" class="btn btn-default">Fácil</button>
-                    <p>Habrán nueve ( 9) y diez ( 10 ) cajas ya llenas</p>
+                    <p>Habrán nueve ( 9) y diez ( 10 ) cajas llenas</p>
                     <hr>
                     <button id="level2" type="submit" class="btn btn-default">Medio</button>
-                    <p>Habrán cinco ( 5 ) y seis ( 6 ) ya las cajas llenas</p>
+                    <p>Habrán cinco ( 5 ) y seis ( 6 ) cajas llenas</p>
                     <hr>
                     <button id="level3" type="submit" class="btn btn-default">Difícil</button>
                     <p>No habrá ninguna caja llena</p>
@@ -110,7 +110,7 @@
                   </div>
                   <div class="modal-footer">
                         <a href="" onclick="location.reload()">
-                                <button id="volver">volver a jugar</button>
+                                <button id="volver">Volver a jugar</button>
                             </a>
                             <a href="#" onclick="history.back()">
                                 <button>Atrás</button>
@@ -140,7 +140,7 @@
                     </div>
                     <div class="modal-footer">
                             <a href="" onclick="location.reload()">
-                                    <button id="volver">volver a jugar</button>
+                                    <button id="volver">Volver a jugar</button>
                                 </a>
                                 <a href="#" onclick="history.back()">
                                     <button>Atrás</button>
