--- a/MyApp/www/juegos/Drag/ipv4-por.html
+++ b/MyApp/www/juegos/Drag/ipv4-por.html
@@ -50,10 +50,10 @@
                 <div class="level-difficulty">
                     <h4>Escolha um nível de dificuldade</h4>                    
                     <button id="level1" type="submit" class="btn btn-default">Fácil</button>
-                    <p>Haverá entre nove ( 9) e 10 (dez) e caixas cheias</p>
+                    <p>Haverá entre nove ( 9) e 10 (dez) caixas cheias</p>
                     <hr>
                     <button id="level2" type="submit" class="btn btn-default">Meio</button>
-                    <p>Haverá entre cinco (5) e 6 (seis) e caixas cheias</p>
+                    <p>Haverá entre cinco (5) e 6 (seis) caixas cheias</p>
                     <hr>
                     <button id="level3" type="submit" class="btn btn-default">Difícil</button>
                     <p>Não haverá caixa cheia</p>
