--- a/MyApp/www/juegos/Memoria/index-es.html
+++ b/MyApp/www/juegos/Memoria/index-es.html
@@ -61,7 +61,7 @@
                                     <p>Habrán doce (12) tarjetas para elegir.</p>
                                     <hr>
                                     <button id="level2" type="submit" class="btn btn-default">Medio</button>
-                                    <p>Habrán dieciséis (16) de tarjetas para elegir .</p>
+                                    <p>Habrán dieciséis (16) tarjetas para elegir .</p>
                                     <hr>
                                     <button id="level3" type="submit" class="btn btn-default">Difícil</button>
                                     <p>Habrán veinticuatro (24) tarjetas para elegir .</p>
@@ -119,7 +119,7 @@
                         </div>
                         <div class="modal-footer">
                             <a href="" onclick="location.reload()">
-                                <button id="volver">volver a jugar</button>
+                                <button id="volver">Volver a jugar</button>
                             </a>
                             <a href="#" onclick="history.back()">
                                 <button>Atrás</button>
@@ -150,7 +150,7 @@
                         </div>
                         <div class="modal-footer">
                             <a href="" onclick="location.reload()">
-                                <button id="volver">volver a jugar</button>
+                                <button id="volver">Volver a jugar</button>
                             </a>
                             <a href="#" onclick="history.back()">
                                 <button>Atrás</button>
