--- a/MyApp/www/juegos/Memoria/index-por.html
+++ b/MyApp/www/juegos/Memoria/index-por.html
@@ -58,7 +58,7 @@
                                     <p>Haverá doze (12) cartas para escolher.</p>
                                     <hr>
                                     <button id="level2" type="submit" class="btn btn-default">Meios</button>
-                                    <p>Haverá dezesseis (16) de cartões para escolher.</p>
+                                    <p>Haverá dezesseis (16) cartões para escolher.</p>
                                     <hr>
                                     <button id="level3" type="submit" class="btn btn-default">Difícil</button>
                                     <p>Haverá vinte e quatro (24) cartas para escolher.</p>
