--- a/MyApp/www/juegos/discos/ipv4-es.html
+++ b/MyApp/www/juegos/discos/ipv4-es.html
@@ -113,7 +113,7 @@
                   </div>
                   <div class="modal-footer">
                         <a href="" onclick="location.reload()">
-                                <button id="volver">volver a jugar</button>
+                                <button id="volver">Volver a jugar</button>
                             </a>
                             <a href="#" onclick="history.back()">
                                 <button>Atrás</button>
@@ -143,7 +143,7 @@
                     </div>
                     <div class="modal-footer">
                             <a href="" onclick="location.reload()">
-                                    <button id="volver">volver a jugar</button>
+                                    <button id="volver">Volver a jugar</button>
                                 </a>
                                 <a href="#" onclick="history.back()">
                                     <button>Atrás</button>
