--- a/MyApp/www/juegos/trivia/index-por.html
+++ b/MyApp/www/juegos/trivia/index-por.html
@@ -103,16 +103,8 @@
 
 	</div>
 
-	<a href="#" onclick="Salir()"><div id="exit">Saída</div></a>
-	<a href="#" onclick="Volver()" ><div id="volver" style="visibility:hidden">Jogar novamente</div></a>
-
-<script type="text/javascript">
-function Volver(){
-	window.location="/juegos/trivia/index-por.html";
-}
-function Salir(){
-	window.location="/index-por.html";
-}
-</script>	
+	<a href="../../index-por.html"><div id="exit">Saída</div></a>
+	<a href="" onclick="location.reload()" ><div id="volver" style="visibility:hidden">Jogar novamente</div></a>
+	
 </body>
 </html>
