--- a/MyApp/www/juegos/trivia/index.html
+++ b/MyApp/www/juegos/trivia/index.html
@@ -94,16 +94,8 @@
 
 		</div>
 
-	<a href="#" onclick="Salir()"><div id="exit">Back</div></a>
-	<a href="#" onclick="Volver()" ><div id="volver" style="visibility:hidden">Play again</div></a>
-
-<script type="text/javascript">
-function Volver(){
-	window.location="/juegos/trivia/index.html";
-}
-function Salir(){
-	window.location="/index.html";
-}
-</script>	
+	<a href="../../index.html"><div id="exit">Back</div></a>
+	<a href="" onclick="location.reload()" ><div id="volver" style="visibility:hidden">Play again</div></a>
+	
 </body>
 </html>
