--- a/MyApp/www/juegos/Drag/index-es.html
+++ b/MyApp/www/juegos/Drag/index-es.html
@@ -61,7 +61,7 @@
                                <button id="Ethernet" class="btn btn-default">Ethernet </button>
                             </a>
                             <hr>
-                            <a href="ICMPv6-es.html">
+                            <a href="icmpv6-es.html">
                                <button id="ICMPv6" class="btn btn-default">ICMPv6</button>
                             </a>
                             <hr>
