--- a/MyApp/www/juegos/Drag/tcp-es.html
+++ b/MyApp/www/juegos/Drag/tcp-es.html
@@ -114,7 +114,7 @@
                         </div>
                         <div class="modal-footer">
                                 <a href="" onclick="location.reload()">
-                                        <button id="volver">volver a jugar</button>
+                                        <button id="volver">Volver a jugar</button>
                                     </a>
                                     <a href="#" onclick="history.back()">
                                         <button>Atrás</button>
@@ -144,7 +144,7 @@
                         </div>
                         <div class="modal-footer">
                                 <a href="" onclick="location.reload()">
-                                        <button id="volver">volver a jugar</button>
+                                        <button id="volver">Volver a jugar</button>
                                     </a>
                                     <a href="#" onclick="history.back()">
                                         <button>Atrás</button>
