--- a/MyApp/www/juegos/Drag/udp-es.html
+++ b/MyApp/www/juegos/Drag/udp-es.html
@@ -111,7 +111,7 @@
                         </div>
                         <div class="modal-footer">
                                 <a href="" onclick="location.reload()">
-                                        <button id="volver">volver a jugar</button>
+                                        <button id="volver">Volver a jugar</button>
                                     </a>
                                     <a href="#" onclick="history.back()">
                                         <button>Atrás</button>
@@ -141,7 +141,7 @@
                         </div>
                         <div class="modal-footer">
                                 <a href="" onclick="location.reload()">
-                                        <button id="volver">volver a jugar</button>
+                                        <button id="volver">Volver a jugar</button>
                                     </a>
                                     <a href="#" onclick="history.back()">
                                         <button>Atrás</button>
