--- a/MyApp/www/juegos/crucigrama/InternetGovernance-es.html
+++ b/MyApp/www/juegos/crucigrama/InternetGovernance-es.html
@@ -64,7 +64,7 @@
 									</div>
 									<div class="modal-footer">
 											<a href="" onclick="location.reload()">
-													<button id="volver">volver a jugar</button>
+													<button id="volver">Volver a jugar</button>
 											</a>
 											<a href="#" onclick="history.back()">
 													<button>Atrás</button>
@@ -94,7 +94,7 @@
 									</div>
 									<div class="modal-footer">
 											<a href="" onclick="location.reload()">
-													<button id="volver">volver a jugar</button>
+													<button id="volver">Volver a jugar</button>
 											</a>
 											<a href="#" onclick="history.back()">
 													<button>Atrás</button>
