--- a/MyApp/www/juegos/crucigrama/crosswordip6-es.html
+++ b/MyApp/www/juegos/crucigrama/crosswordip6-es.html
@@ -53,7 +53,7 @@
                   </div>
                   <div class="modal-footer">
 						<a href="" onclick="location.reload()">
-                                <button id="volver">volver a jugar</button>
+                                <button id="volver">Volver a jugar</button>
                             </a>
                             <a href="#" onclick="history.back()">
                                 <button>Atrás</button>
@@ -83,7 +83,7 @@
                     </div>
                     <div class="modal-footer">
 							<a href="" onclick="location.reload()">
-									<button id="volver">volver a jugar</button>
+									<button id="volver">Volver a jugar</button>
 								</a>
 								<a href="#" onclick="history.back()">
 									<button>Atrás</button>
