--- a/MyApp/www/juegos/trivia/index-es.html
+++ b/MyApp/www/juegos/trivia/index-es.html
@@ -94,16 +94,9 @@
 
 	</div>
 
-	<a href="#" onclick="Salir()"><div id="exit">Salir</div></a>
-	<a href="#" onclick="Volver()" ><div id="volver" style="visibility:hidden">Volver a jugar</div></a>
+	<a href="../../index-es.html"><div id="exit">Salir</div></a>
+	<a href="" onclick="location.reload()" ><div id="volver" style="visibility:hidden">Volver a jugar</div></a>
 
-<script type="text/javascript">
-function Volver(){
-	window.location="/juegos/trivia/index-es.html";
-}
-function Salir(){
-	window.location="/index-es.html";
-}
-</script>
+
 </body>
 </html>
