--- a/MyApp/www/index.html
+++ b/MyApp/www/index.html
@@ -292,8 +292,8 @@
                   <a href="http://www.internetsociety.org/" target="_blank"><h4>ISOC</h4></a>
                   <a href="http://www.lacnic.net/web/lacnic/ipv6" target="_blank"><h4>LACNIC</h4></a>
                   <h2>VERSION</h2>               
-                  <h4>"2.5"</h4> 
-                  <h4> Comp=30-05-2019</h4>
+                  <h4>"2.6"</h4> 
+                  <h4> Comp=03-01-2019</h4>
               </div>
             </div>
             <div class="modal-footer">
@@ -348,7 +348,7 @@
           <!-- // <script src="sounds/sound.js"></script> -->
         </footer>
     </div>
-    <h4 class="desc">Version="2.5" Comp=30-05-2019</h4>  
+    <h4 class="desc">Versión="2.6" Comp=03-01-2019</h4>
   </body>
 </html>
 
