--- a/MyApp/www/index-por.html
+++ b/MyApp/www/index-por.html
@@ -44,7 +44,7 @@ Por favor, faça o login com sua rede social preferida para acompanhar seu progr
               </div>
             </div>
             <div class="modal-footer">
-              <button type="button" id="close" class="btn btn-default" data-dismiss="modal">Close</button>
+              <button type="button" id="close" class="btn btn-default" data-dismiss="modal">Fechar</button>
             </div>
           </div>
         </div>
