--- a/MyApp/www/index-es.html
+++ b/MyApp/www/index-es.html
@@ -264,7 +264,7 @@
           <div class="modal-content">
             <div class="modal-header">
               <!-- <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button> -->
-              <h4 class="modal-title" id="aboutModalLabel">Creditos</h4>
+              <h4 class="modal-title" id="aboutModalLabel">Créditos</h4>
             </div>
             <div class="modal-body">
               <div class="credit text-center">
